[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valkeyrie"
dynamic = ["version"]
description = "16S Nanopore sequencing validation analysis - Sanger vs Nanopore comparison, concentration and material analysis"
license = {text = "MIT"}
authors = [
    {name = "Ryan James Kennedy", email = "ryan.kennedy@skane.se"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8,<3.14"
dependencies = [
    "click>=8.0.0",
    "pymongo>=4.0.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "scipy>=1.9.0",
    "adjustText>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/clinicalgenomicslund/eyrie"
Repository = "https://github.com/clinicalgenomicslund/eyrie"

[project.scripts]
valkeyrie = "valkeyrie.cli:cli"

[tool.hatch.version]
path = "valkeyrie/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["valkeyrie"]
